	PR debug/39471 	* dwarf2out.c (dwarf2out_imported_module_or_decl_1): Emit 	DW_TAG_imported_module even if decl is IMPORTED_DECL with 	NAMESPACE_DECL in its DECL_INITIAL.

* cp-gimplify.c (cp_gimplify_expr): Don't set DECL_NAME
	on IMPORTED_DECL.

	* g++.dg/debug/dwarf2/imported-module-2.C: Expect
	DW_TAG_imported_module, not just any DW_TAG_imported prefixed tag.
	* g++.dg/debug/dwarf2/imported-module-3.C: Likewise.
	* g++.dg/debug/dwarf2/imported-module-4.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144911 138bc75d-0d04-0410-961f-82ee72b054a4