gcc/testsuite/g++.dg/debug/dwarf2/imported-module-2.C
@@ -2,7 +2,7 @@
 // Origin: PR debug/38390
 // { dg-do compile  }
 // { dg-options "-g -dA" }
-// { dg-final { scan-assembler "DW_TAG_imported" }  }
+// { dg-final { scan-assembler "DW_TAG_imported_module" }  }
 
 namespace A
 {
