gcc/testsuite/g++.dg/debug/dwarf2/imported-module-4.C
@@ -1,7 +1,7 @@
 // PR debug/39379
 // { dg-do compile }
 // { dg-options "-g -dA" }
-// { dg-final { scan-assembler "DW_TAG_imported" }  }
+// { dg-final { scan-assembler "DW_TAG_imported_module" }  }
 
 namespace A
 {
